--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@babel/parser": "^7.23.9",
     "node-html-parser": "^6.1.12",
     "postcss": "^8.4.33",
-    "postcss-scss": "^4.0.9"
+    "postcss-scss": "^4.0.9",
+    "postcss-nested": "^6.0.1"
   },
   "files": [
     "bin/",
